GNOME Bugzilla – Bug 689714
Too hard to not expand last item when in a ScrolledWindow
Last modified: 2018-04-15 00:30:51 UTC
What it should look like: https://live.gnome.org/Design/SystemSettings/Privacy?action=AttachFile&do=get&target=Privacy+System+Settings.png What it looks like: http://bugzilla-attachments.gnome.org/attachment.cgi?id=230641 Note how the last item doesn't expand all the way down to the bottom of the scrolled view in the mockups.
We're moving to gitlab! As part of this move, we are moving bugs to NEEDINFO if they haven't seen activity in more than a year. If this issue is still important to you and still relevant with GTK+ 3.22 or master, please reopen it and we will migrate it to gitlab.
As announced a while ago, we are migrating to gitlab, and bugs that haven't seen activity in the last year or so will be not be migrated, but closed out in bugzilla. If this bug is still relevant to you, you can open a new issue describing the symptoms and how to reproduce it with gtk 3.22.x or master in gitlab: https://gitlab.gnome.org/GNOME/gtk/issues/new