privacy: Fix list sizing issues

Make the list not expand all the way to the bottom.

Revert when https://bugzilla.gnome.org/show_bug.cgi?id=689714
is committed.

https://bugzilla.gnome.org/show_bug.cgi?id=689607