panels/privacy/cc-privacy-panel.c
@@ -172,23 +172,25 @@ add_row (CcPrivacyPanel *self,
 {
   GtkWidget *box, *w;
 
-  box = gtk_box_new (GTK_ORIENTATION_HORIZONTAL, 0);
+  box = gtk_box_new (GTK_ORIENTATION_HORIZONTAL, 50);
   g_object_set_data (G_OBJECT (box), "dialog-id", (gpointer)dialog_id);
   gtk_widget_set_hexpand (box, TRUE);
   gtk_container_add (GTK_CONTAINER (self->priv->list_box), box);
 
   w = gtk_label_new (label);
+  gtk_misc_set_alignment (GTK_MISC (w), 0.0f, 0.5f);
   gtk_widget_set_margin_left (w, 12);
   gtk_widget_set_margin_right (w, 12);
   gtk_widget_set_margin_top (w, 6);
   gtk_widget_set_margin_bottom (w, 6);
   gtk_widget_set_halign (w, GTK_ALIGN_START);
   gtk_widget_set_valign (w, GTK_ALIGN_CENTER);
-  gtk_container_add (GTK_CONTAINER (box), w);
+  gtk_widget_set_hexpand (w, TRUE);
+  gtk_box_pack_start (GTK_BOX (box), w, TRUE, TRUE, 0);
   gtk_widget_set_margin_left (status, 12);
   gtk_widget_set_margin_right (status, 12);
-  gtk_widget_set_halign (w, GTK_ALIGN_END);
-  gtk_widget_set_valign (w, GTK_ALIGN_CENTER);
+  gtk_widget_set_halign (status, GTK_ALIGN_END);
+  gtk_widget_set_valign (status, GTK_ALIGN_CENTER);
   gtk_box_pack_end (GTK_BOX (box), status, FALSE, FALSE, 0);
 
   gtk_widget_show_all (box);
